# mastodon-sim

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  masto-sim-cosmos-compose.json  pyproject.toml  repo_to_md.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: believability.md  bug_report.md
.github/workflows/: docs.yml.disabled  test.yml
conf/: config.yaml  election.yaml
conf/agents/: election_agents.yaml
conf/election/: agents.yaml  probes.yaml  soc_sys.yaml
conf/probes/: election_probes.yaml
conf/sim/: election_sim.yaml
conf/soc_sys/: election_soc_sys.yaml
docs/: CONTRIBUTING.md  conf.py  contributing.md  index.rst  installation.md
examples/election/: README.md  gen_config.py
examples/election/SOLAR_workshop/: figure2.ipynb
examples/election/agent_lib/: candidate.py  malicious.py  voter.py
examples/election/config_utils/: __init__.py  agent_query_lib.py  gen_config.py
examples/election/input/news_data/: news_processing.py  v1_news.json  v1_news_bill_bias.json  v1_news_bradley_bias.json  v1_news_headlines_no_bias.json  v1_news_no_bias.json
examples/election/input/personas/: Reddit_Persona_Generation.py
examples/election/news_data/: v1_news.json  v1_news_headlines_bill_bias.json  v1_news_headlines_bradley_bias.json  write_newsfile_from_filesheadlines.py
examples/election/news_data/biased_news_generation/: bill_baseline_sentiments.json  bill_biased_pro_bill_sentiments.json  bill_biased_pro_bradley_sentiments.json  bradley_baseline_sentiments.json  bradley_biased_pro_bill_sentiments.json  bradley_biased_pro_bradley_sentiments.json  news_agent_headline_gen_test.ipynb
examples/election/notebooks/: basic_output_processing.ipynb  basic_sim.ipynb  run_simulations.ipynb
examples/election/src/election_sim/: cached_headlines.json  headline_image_mapping.json  image_data.json  (+4 more)
infrastructure/mastodon-on-aws/: .gitignore  README.md  generate_parameters.sh  mastodon.yaml  package-cfn-modules.sh  package.json
infrastructure/mastodon-on-aws/custom_mods/: Dockerfile  build_and_push.sh  build_push_update.sh  rack_attack.rb  update_cloudformation.sh
infrastructure/mastodon-on-aws/webserver_scripts/: create_users.py  create_users_cosmos_mastodon.py
notebooks/: Calendar.ipynb  Concordia+Mastodon.ipynb  Concordia+Mastodon_100.ipynb  Concordia+Mastodon_100_independent_sim.ipynb  Concordia+Mastodon_100_ollama.ipynb  Concordia+Mastodon_ollama.ipynb  Mastodon.ipynb  README.md  app_logger.txt  basic_sim.ipynb  configs.json  graph_follower_seeding.ipynb  independent_configs.json  independent_configs_test1_Bill_bias.json  independent_malicious_configs.json  mastodon.ipynb  payne-basic_sim.ipynb  payne-independent_malicious_configs.json  payne-independent_malicious_configs.jsonpol_log.txt  payne-independent_malicious_configs.jsonvotes_log.txt  sim_utils.py  time_logger.txt
notebooks/SOLAR_workshop/personas/: BaseDados_3M_transversal_2021.sav
notebooks/concordia_examples/: Calendar.ipynb
notebooks/configs/: independent_configs_test1_Bill_bias.jsonpol_log.txt  independent_configs_test1_Bill_bias.jsonvotes_log.txt  independent_configs_test2_neutralvoters.json  independent_configs_test2_neutralvoters.jsonapp_logger.txt  independent_configs_test2_neutralvoters.jsonpol_log.txt  independent_configs_test2_neutralvoters.jsonvotes_log.txt  independent_configs_test3_neutralcandidatenames.jsonpol_log.txt  independent_configs_test3_neutralcandidatenames.jsonvotes_log.txt  independent_configs_test4_flippolicies.json  independent_configs_test4_flippolicies.jsonpol_log.txt  independent_configs_test4_flippolicies.jsonvotes_log.txt  independent_configs_test5_mariamale.json  independent_configs_test5_mariamale.jsonpol_log.txt  independent_configs_test5_mariamale.jsontime_logger.txt  independent_configs_test5_mariamale.jsonvotes_log.txt  independent_configs_test8_Bill_bias_malecans.json  independent_malicious_configs.json  independent_malicious_configs.jsonapp_logger.txt  independent_malicious_configs.jsonpol_log.txt  independent_malicious_configs.jsontime_logger.txt  independent_malicious_configs.jsonvotes_log.txt  independent_malicious_configs_betterpolicies.json  independent_malicious_configs_betterpolicies.jsonapp_logger.txt  independent_malicious_configs_betterpolicies.jsonpol_log.txt  independent_malicious_configs_betterpolicies.jsonvotes_log.txt  independent_malicious_configs_test65_mariamale.json  independent_malicious_configs_test65_mariamale.jsonapp_logger.txt  independent_malicious_configs_test65_mariamale.jsonpol_log.txt  independent_malicious_configs_test65_mariamale.jsontime_logger.txt  independent_malicious_configs_test65_mariamale.jsonvotes_log.txt  malindependent_configs_test7_neutraldudes.json  malindependent_configs_test7_neutraldudes.jsonapp_logger.txt  malindependent_configs_test7_neutraldudes.jsonpol_log.txt  malindependent_configs_test7_neutraldudes.jsontime_logger.txt  malindependent_configs_test7_neutraldudes.jsonvotes_log.txt  testindependent_configs_test5_mariamale.json
src/mastodon_sim/: __init__.py  api.py  cli.py  logging_config.py
src/mastodon_sim/concordia/: __init__.py
src/mastodon_sim/mastodon_ops/: __init__.py  block.py  boost.py  create_app.py  create_env_file.py  delete_posts.py  env_utils.py  follow.py  get_client.py  like.py  login.py  mute.py  new_app.py  notifications.py  post_status.py  read_bio.py  reset_user.py  reset_users.py  timeline.py  toot.py  unblock.py  unfollow.py  unmute.py  update_bio.py
src/mastodon_sim/mastodon_utils/: __init__.py  account_ids.py  create_app.py  get_users_from_env.py  graphs.py
src/sim/: gen_configs.py  main.py
src/sim/agent_utils/: app_side_only_gamemaster.py  base_agent.py  exogenous_agent.py
src/sim/analysis_utils/: dashboard-withthoughts.py  output_proc_utils.py
src/sim/conf/: config.yaml
src/sim/sim_utils/: agent_speech_utils.py  concordia_utils.py  media_utils.py  misc_sim_utils.py
tests/: __init__.py  test_api.py  test_cli.py  test_import.py
utils/: get_user_info.py  public_timeline.py  screenshots.py  user_timeline.py
(+44 files in other folders)
